--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  background-color: rgb(74, 176, 123);
+  background-color: rgb(74 176 123);
   color: hsl(0deg 0% 0%);
   padding: 40px;
   text-align: center;
