--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  background-color: rgb(124, 140, 223);
+  background-color: rgb(124 140 223);
   color: hsl(0deg 0% 0%);
   padding: 40px;
   text-align: center;
